[package]
name = "what-is-my-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-cors = "0.6.4"
actix-web = "4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"

[profile.release]
panic = "unwind"         # Strip expensive panic clean-up logic
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
lto = true               # Enables link to optimizations
opt-level = 3            # Optimize for binary size
strip = true             # Remove debug symbols
debug = false            # Disable debug assertions
split-debuginfo = 'off'  # Remove debug symbols
debug-assertions = false # Disable debug assertions
overflow-checks = false  # Disable overflow checks
incremental = false      # Disable incremental compilation
rpath = false            # Disable rpath
